# pawnshop-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Dockerfile.dev  Dockerfile.prod  Dockerfile.web  Dockerfile.worker  README.md  bandit.yaml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  start.sh
.circleci/: config.yml
env/: sample.env.backend  sample.env.db  sample.env.docker  sample.env.heroku  sample.env.local
src/: conftest.py  cron_fun.txt  cron_test1.txt  cron_test2.txt  cron_update_product_status.txt  entrypoint.sh  manage.py  requirements.txt  runtests.py
src/api/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
src/auth/: admin.py  models.py  tests.py  views.py
src/authentication/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
src/authentification/: apps.py  models.py  serializers.py  urls.py  views.py  viewsets.py
src/cashdesk/: apps.py  models.py  serializers.py  urls.py  views.py
src/common/: exceptions.py  permissions.py  utils.py
src/config/: cron.py  schedule.yml  settings.py  urls.py
src/customer/: admin.py  models.py  serializers.py  urls.py  views.py
src/loan/: models.py  serializers.py  urls.py  views.py
src/offer/: models.py  serializers.py  urls.py  views.py
src/pdf/: loan_test1.html  pdf.py  test.html
src/product/: admin.py  choices.py  conftest.py  exceptions.py  models.py  serializers.py  urls.py  views.py
src/shop/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
src/src/: settings.py  (+1 more)
(+138 files in other folders)
