[tool.poetry]
name = "pawnshop-backend"
version = "0.1.0"
description = ""
authors = ["Zdeněk Lapeš <lapes.zdenek@gmail.com>"]
readme = "README.md"
packages = [{include = "pawnshop_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
psycopg2 = "^2.9.3"
django-nextjs = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
